add level to ranking
